--- a/views/login.jade
+++ b/views/login.jade
@@ -5,14 +5,15 @@ body
 		
 		.container
 			form.form-sigin(method="POST"
-				action="/index")
+				action="/"
+				enctype="application/x-www-form-urlencoded")
 				
 				fieldset
 					h2.form-signin-heading Please Signin
 					br
-					input(type="text", placeholder="Id")
+					input(type="text", name="uid", id="uid", placeholder="Id")
 					br	
-					input(type="password", placeholder="password")
+					input(type="password", name="pass", id="pass", placeholder="password")
 					br
 					button.btn.btn-primary(type="submit", ) Signin
 
